--- a/i/index.html
+++ b/i/index.html
@@ -351,7 +351,7 @@
         </div>
       </div>
       <!-- Mobile Drawer (Bottom) -->
-      <div id="mobileDrawer"
+            <div id="mobileDrawer"
         class="fixed inset-x-0 bottom-0 h-3/5 bg-white shadow-lg transform transition-transform duration-300 ease-in-out md:hidden drawer"
         :class="{'open': drawerOpen, 'closed': !drawerOpen}">
         <div class="p-4">
@@ -362,33 +362,92 @@
             </button>
           </div>
           <div class="space-y-3">
-            <input x-model="searchTerm" @input="resetPagination" type="search" placeholder="Search..."
-              class="w-full p-1 border border-gray-300 rounded-sm focus:outline-none focus:ring-2 focus:ring-indigo-500" />
-            <input x-model="idFilter" @input="resetPagination" type="number" placeholder="Filter by ID"
-              class="w-full p-1 border border-gray-300 rounded-sm focus:outline-none focus:ring-2 focus:ring-indigo-500" />
-            <select x-model="sortOrder" @change="resetPagination"
-              class="w-full p-1 border border-gray-300 rounded-sm focus:outline-none focus:ring-2 focus:ring-indigo-500">
-              <option value="dateDesc">Date (Newest)</option>
-              <option value="dateAsc">Date (Oldest)</option>
-              <option value="userUrgent">Urgent</option>
-              <option value="relevance">Relevance</option>
-            </select>
-            <select x-model="educationFilter" @change="applyFilters()"
-              class="w-full p-1 border border-gray-300 rounded-sm focus:outline-none focus:ring-2 focus:ring-indigo-500">
-              <option value="">All</option>
-              <option value="Preprimary">Preprimary</option>
-              <option value="Primary">Primary</option>
-              <option value="Upper Primary">Upper Primary</option>
-              <option value="Secondary">Secondary</option>
-              <option value="Intermediate">Intermediate</option>
-              <option value="Graduate">Graduate</option>
-              <option value="Post Graduate">Post Graduate</option>
-              <option value="Engineer">Engineer</option>
-              <option value="Doctor">Doctor</option>
-              <option value="PhD">PhD</option>
-              <option value="Hafiz/Aalim">Hafiz/Aalim</option>
-              <option value="Diploma">Diploma</option>
-            </select>
+            <div class="flex justify-between  items-center space-x-1">
+              <input x-model="searchTerm" @input="resetPagination" type="search" placeholder="Search..."
+                class="w-full p-2 border border-gray-300 rounded-sm focus:outline-none focus:ring-2 focus:ring-indigo-500" />
+              <input x-model="idFilter" @input="resetPagination" type="number" placeholder="Filter by ID"
+                class="w-full p-2 border border-gray-300 rounded-sm focus:outline-none focus:ring-2 focus:ring-indigo-500" />
+            </div>
+            <div class="flex justify-between  items-center space-x-1">
+              <select x-model="sortOrder" @change="resetPagination"
+                class="p-2 border border-gray-300 rounded-sm focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                <option value="dateDesc">Newest</option>
+                <option value="dateAsc">Oldest</option>
+                <option value="userUrgent">Urgent</option>
+              </select>
+              <select x-model="educationFilter" @change="applyFilters()"
+                class="p-2 border border-gray-300 rounded-sm focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                <option value="">All Education</option>
+                <option value="Preprimary">Preprimary</option>
+                <option value="Primary">Primary</option>
+                <option value="Upper Primary">Upper Primary</option>
+                <option value="Secondary">Secondary</option>
+                <option value="Intermediate">Intermediate</option>
+                <option value="Graduate">Graduate</option>
+                <option value="Post Graduate">Post Graduate</option>
+                <option value="Engineer">Engineer</option>
+                <option value="Doctor">Doctor</option>
+                <option value="PhD">PhD</option>
+                <option value="Hafiz/Aalim">Hafiz/Aalim</option>
+                <option value="Diploma">Diploma</option>
+              </select>
+              <select x-model="ageFilter" @change="applyFilters()"
+                class="p-2 border border-gray-300 rounded-sm focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                <option value="">All Age</option>
+                <option value="18">18</option>
+                <option value="19">19</option>
+                <option value="20">20</option>
+                <option value="21">21</option>
+                <option value="22">22</option>
+                <option value="23">23</option>
+                <option value="24">24</option>
+                <option value="25">25</option>
+                <option value="26">26</option>
+                <option value="27">27</option>
+                <option value="28">28</option>
+                <option value="29">29</option>
+                <option value="30">30</option>
+                <option value="31">31</option>
+                <option value="32">32</option>
+                <option value="33">33</option>
+                <option value="34">34</option>
+                <option value="35">35</option>
+                <option value="36">36</option>
+                <option value="37">37</option>
+                <option value="38">38</option>
+                <option value="39">39</option>
+                <option value="40">40</option>
+                <option value="41">41</option>
+                <option value="42">42</option>
+                <option value="43">43</option>
+                <option value="44">44</option>
+                <option value="45">45</option>
+                <option value="46">46</option>
+                <option value="47">47</option>
+                <option value="48">48</option>
+                <option value="49">49</option>
+                <option value="50">50</option>
+                <option value="51">51</option>
+                <option value="52">52</option>
+                <option value="53">53</option>
+                <option value="54">54</option>
+                <option value="55">55</option>
+                <option value="56">56</option>
+                <option value="57">57</option>
+                <option value="58">58</option>
+                <option value="59">59</option>
+                <option value="60">60</option>
+                <option value="61">61</option>
+                <option value="62">62</option>
+                <option value="63">63</option>
+                <option value="64">64</option>
+                <option value="65">65</option>
+                <option value="66">66</option>
+                <option value="67">67</option>
+                <option value="68">68</option>
+                <option value="69">69</option>
+              </select>
+            </div>
 
             <div class="flex justify-between border border-gray-300 rounded-sm overflow-hidden">
               <ul class="w-full tab-list relative flex flex-wrap px-1.5 py-1.5 list-none rounded-md bg-slate-100">
@@ -422,15 +481,14 @@
               </ul>
             </div>
             <a href="https://telegram.me/liverishteyofficial"
-              class="inline-block font-semibold py-2 px-4 rounded w-full rounded-md focus:outline-none bg-red-600 shadow-md text-white text-xl py-3 my-2 text-center">
+              class="inline-block font-semibold py-2 px-4 rounded w-full rounded-md focus:outline-none bg-red-600 shadow-md text-white text-xl py-3 my-3 text-center">
               Post Your Ad
             </a>
           </div>
         </div>
         <button @click="toggleDrawer"
-          class="absolute bottom-0 left-0 right-0 bg-indigo-600 text-white py-3 text-center">Close</button>
+          class="absolute bottom-0 left-0 right-0 bg-indigo-600 text-white py-3 text-center">Close Filters</button>
       </div>
-
       <!-- Floating Action Button -->
       <button @click="toggleDrawer"
         class="fixed bottom-4 right-4 bg-indigo-500 text-white rounded-full p-4 shadow-lg md:hidden filter-button"
