update privacy and terms

--- a/privacy.html
+++ b/privacy.html
@@ -301,7 +301,7 @@
             company</p>
           <p class="my-2 pt-3">We operates in compliance with the data protection laws and regulations applicable in Hyderabad, Telangana
             State, India. </p>
-          <h2>Changes and amendments</h2>
+          <h2 class="my-2 font-bold pt-3">Changes and amendments</h2>
           <p class="my-2 pt-3">We reserve the right to modify this privacy policy relating to the Website/streams services at any time,
             effective upon
             posting of an updated version of this Policy on the Website/Streaming Channels. When we do we will revise
