--- a/terms.html
+++ b/terms.html
@@ -239,8 +239,7 @@
           <p class="my-2 pt-3"> 3. Discontinuation of Services: Upon termination, users' access to Liverishtey.com and its services will
             be discontinued. There may be restrictions or limitations on reactivation or re-registration after
             termination, depending on the specific circumstances. </p>
-          <p class="my-2 pt-3"> 4. Business Discontinuity: In the event of business discontinuity, Liverishtey.com will refund 50% of the
-            unused membership fees paid by the user. </p>
+
           <h1 class="my-2 font-bold pt-3">Amendments: </h1>
           <p class="my-2 pt-3"> 1. Right to Amend: Liverishtey.com reserves the right to amend and modify the Terms & Conditions at its
             sole discretion. There are no specific limitations or restrictions on the website's ability to make
@@ -257,6 +256,9 @@
             implementation by Liverishtey.com. The updated Terms & Conditions will apply to all interactions and
             activities on the website from the effective date onward. There may not be any retroactive application of
             the amendments. </p>
+
+            <h1 class="my-2 font-bold pt-4 text-xl uppercase">Refund Policy</h1>
+            <p class="my-2 pt-3 uppercase"> As part of the nature of our business, we regret to inform you that we are unable to accommodate requests for refunds, repayments, reimbursements, compensations, restitutions, returns, paybacks, adjustments, allowances, chargebacks, indemnifications, or redress.</p>
         <h1 class="my-2 font-bold pt-3">Grievance Redressal Officer</h1>
         <p class="my-2 pt-3">In the event you come across any violation by another user including but not limited to having content in the web site that is obscene, menacing, grossly offensive, harming minors, infringing copyright, patents,  etc., or another user is impersonating etc. you may then please be free to provide your concerns in writing or email us with digital signature to:</p>
         <p class="my-2 pt-3">Email: support@liverishtey.com,</p>
