--- a/i/index.html
+++ b/i/index.html
@@ -498,6 +498,21 @@
     </div>
 
     <script src="javascript.js"></script>
+    <footer class="mx-auto mt-32 w-full max-w-container px-4 sm:px-6 lg:px-8">
+      <div class="border-t border-slate-900/5 py-10"><a href="https://liverishtey.com"
+          class="inline-flex items-center justify-center">
+          <span class="ml-2 mx-auto font-bold tracking-wide text-red-600 uppercase">liverishtey.com</span>
+        </a>
+        <p class="mt-5 text-center text-sm leading-6 text-slate-500">© 2024 Liverishtey Matrimonial & Matchmaking. All
+          rights reserved.
+        </p>
+        <div class="mt-16 flex items-center justify-center space-x-4 text-sm font-semibold leading-6 text-slate-700">
+          <a href="https://liverishtey.com/privacy">Privacy policy</a>
+          <div class="h-4 w-px bg-slate-500/20"></div><a href="https://liverishtey.com/terms">Terms & Conditions</a>
+          <div class="h-4 w-px bg-slate-500/20"></div><a href="https://liverishtey.com/refund-policy">Refund Policy</a>
+        </div>
+      </div>
+    </footer>
   </body>
 
 </html>
