--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                   class="w-full p-3 rounded-full border border-gray-300 focus:ring-2 focus:ring-pink-500">
                   <option value="">Religion</option>
                   <option value="i">Muslim</option>
-                  <option value="h">Hindu</option>
+                  <!-- <option value="h">Hindu</option>
                   <option value="c">Christian</option>
-                  <option value="s">Sikh</option>
+                  <option value="s">Sikh</option> -->
                 </select>
               </div>
               <button type="submit"
@@ -207,7 +207,7 @@
           <div class="w-full md:w-1/2">
             <div
               class="rounded-2xl overflow-hidden shadow-2xl transform hover:scale-105 transition-transform duration-300">
-              <img src="https://images.unsplash.com/photo-1590086783191-a0694c7d1e6e?auto=format&w=800&h=600"
+              <img src="https://images.unsplash.com/photo-1590086783191-a0694c7d1e6e?auto=format&w=800&h=400"
                 alt="Voice Recording Studio" class="w-full h-[400px] object-cover">
             </div>
           </div>
@@ -271,33 +271,33 @@
         <!-- Religion Section -->
         <div class="flex flex-wrap justify-center gap-6 mb-8">
 
-          <a href="/m/i/" target="_self"
+          <a href="/i/" target="_self"
             class="flex items-center px-6 py-2 rounded-full bg-gray-50 hover:bg-gray-100 transition-colors shadow-md">
             Muslim
             <i class="fas fa-external-link-alt ml-2 text-xs text-gray-400"></i>
           </a>
-          <a href="/m/h/" target="_self"
+          <a href="/h/" target="_self"
             class="flex items-center px-6 py-2 rounded-full bg-gray-50 hover:bg-gray-100 transition-colors shadow-md">
             Hindu
             <i class="fas fa-external-link-alt ml-2 text-xs text-gray-400"></i>
           </a>
-          <a href="/m/c/" target="_self"
+          <a href="/c/" target="_self"
             class="flex items-center px-6 py-2 rounded-full bg-gray-50 hover:bg-gray-100 transition-colors shadow-md">
             Christian
             <i class="fas fa-external-link-alt ml-2 text-xs text-gray-400"></i>
           </a>
-          <a href="/m/b/" target="_self"
+          <a href="/b/" target="_self"
             class="flex items-center px-6 py-2 rounded-full bg-gray-50 hover:bg-gray-100 transition-colors shadow-md">
             Buddhist
             <i class="fas fa-external-link-alt ml-2 text-xs text-gray-400"></i>
           </a>
 
-          <a href="/m/s/" target="_self"
+          <a href="/s/" target="_self"
             class="flex items-center px-6 py-2 rounded-full bg-gray-50 hover:bg-gray-100 transition-colors shadow-md">
             Sikh
             <i class="fas fa-external-link-alt ml-2 text-xs text-gray-400"></i>
           </a>
-          <a href="/m/j/" target="_self"
+          <a href="/j/" target="_self"
             class="flex items-center px-6 py-2 rounded-full bg-gray-50 hover:bg-gray-100 transition-colors shadow-md">
             Jain
             <i class="fas fa-external-link-alt ml-2 text-xs text-gray-400"></i>
@@ -371,18 +371,20 @@
               <li><a href="/register.html" class="hover:text-white transition-colors">Submit Profile</a></li>
               <li><a href="https://telegram.me/liverishteyofficial" class="hover:text-white transition-colors">Post
                   Ad</a></li>
-              <li><a href="/privacy-policy" class="hover:text-white transition-colors">Privacy Policy</a></li>
+                  <li><a href="https://www.liverishtey.com/i/membership.html" class="hover:text-white transition-colors">Membership Pricing</a></li>
+              <li><a href="/privacy" class="hover:text-white transition-colors">Privacy Policy</a></li>
+              <li><a href="/refund-policy" class="hover:text-white transition-colors">Refund Policy</a></li>
               <li><a href="/terms" class="hover:text-white transition-colors">Terms of Service</a></li>
             </ul>
           </div>
           <div>
             <h3 class="text-white text-lg font-semibold mb-4">Our Services</h3>
             <ul class="space-y-2 text-sm">
-              <li><a href="/m/i/" class="hover:text-white transition-colors">Muslim Matrimony</a></li>
-              <li><a href="/m/h/" class="hover:text-white transition-colors">Hindu Matrimony</a></li>
-              <li><a href="/m/s/" class="hover:text-white transition-colors">Sikh Matrimony</a></li>
-              <li><a href="/m/c/" class="hover:text-white transition-colors">Christian Matrimony</a></li>
-              <li><a href="/m/j/" class="hover:text-white transition-colors">Jain Matrimony</a></li>
+              <li><a href="/i/" class="hover:text-white transition-colors">Muslim Matrimony</a></li>
+              <li><a href="/h/" class="hover:text-white transition-colors">Hindu Matrimony</a></li>
+              <li><a href="/s/" class="hover:text-white transition-colors">Sikh Matrimony</a></li>
+              <li><a href="/c/" class="hover:text-white transition-colors">Christian Matrimony</a></li>
+              <li><a href="/j/" class="hover:text-white transition-colors">Jain Matrimony</a></li>
             </ul>
           </div>
           <div>
