--- a/refund-policy.html
+++ b/refund-policy.html
@@ -10,91 +10,23 @@
     <link rel="icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="">
     <link rel="icon" type="image/png" sizes="16x16" href="">
+    <link rel="preload" as="style" href="fb087be6.css">
+    <link rel="stylesheet" href="fb087be6.css">
+    <script defer src="https://cdn.tailwindcss.com"></script>
     <meta name="twitter:card" content="summary_large_image" inertia="">
-       <title inertia="">Desclaimer - Live Rishtey</title>
-    <style type="text/css">
-      #nprogress {
-        pointer-events: none;
-      }
+    <meta name="twitter:site" content="@liverishtey" inertia="">
+    <meta name="twitter:title" content="Refund Policy" inertia="">
+    <meta name="twitter:description" content="Last updated on June 19, 2023" inertia="">
+    <meta name="twitter:image" content="https://liverishtey.com/img/" inertia="">
+    <meta name="twitter:creator" content="@liverishtey" inertia="">
+    <meta property="og:url" content="https://liverishtey.com/" inertia="">
+    <meta property="og:type" content="article" inertia="">
+    <meta property="og:title" content="Refund Policy" inertia="">
+    <meta property="og:description" content="Last updated on November 2, 2021" inertia="">
+    <meta property="og:image" content="https://liverishtey.com/img/" inertia="">
+    <meta property="description" content="Last updated on November 18, 2024" inertia="">
+    <title inertia="">Refund Policy - Live Rishtey</title>
 
-      #nprogress .bar {
-        background: #06B6D4;
-
-        position: fixed;
-        z-index: 1031;
-        top: 0;
-        left: 0;
-
-        width: 100%;
-        height: 2px;
-      }
-
-      #nprogress .peg {
-        display: block;
-        position: absolute;
-        right: 0px;
-        width: 100px;
-        height: 100%;
-        box-shadow: 0 0 10px #06B6D4, 0 0 5px #06B6D4;
-        opacity: 1.0;
-
-        -webkit-transform: rotate(3deg) translate(0px, -4px);
-        -ms-transform: rotate(3deg) translate(0px, -4px);
-        transform: rotate(3deg) translate(0px, -4px);
-      }
-
-      #nprogress .spinner {
-        display: block;
-        position: fixed;
-        z-index: 1031;
-        top: 15px;
-        right: 15px;
-      }
-
-      #nprogress .spinner-icon {
-        width: 18px;
-        height: 18px;
-        box-sizing: border-box;
-
-        border: solid 2px transparent;
-        border-top-color: #06B6D4;
-        border-left-color: #06B6D4;
-        border-radius: 50%;
-
-        -webkit-animation: nprogress-spinner 400ms linear infinite;
-        animation: nprogress-spinner 400ms linear infinite;
-      }
-
-      .nprogress-custom-parent {
-        overflow: hidden;
-        position: relative;
-      }
-
-      .nprogress-custom-parent #nprogress .spinner,
-      .nprogress-custom-parent #nprogress .bar {
-        position: absolute;
-      }
-
-      @-webkit-keyframes nprogress-spinner {
-        0% {
-          -webkit-transform: rotate(0deg);
-        }
-
-        100% {
-          -webkit-transform: rotate(360deg);
-        }
-      }
-
-      @keyframes nprogress-spinner {
-        0% {
-          transform: rotate(0deg);
-        }
-
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-    </style>
   </head>
 
   <body class="font-sans antialiased text-gray-600 min-h-full flex flex-col [overflow-anchor:none]" scroll-region="">
@@ -123,65 +55,15 @@
         class="absolute left-1/2 top-0 -ml-[39rem] w-[113.125rem] max-w-none">
       <div class="px-4 sm:px-6 lg:px-8">
         <div class="relative mx-auto max-w-[37.5rem] pt-20 text-center pb-24">
-          <h1 class="text-4xl font-extrabold tracking-tight text-slate-900 sm:text-5xl">Disclaimer</h1>
+          <h1 class="text-4xl font-extrabold tracking-tight text-slate-900 sm:text-5xl">Refund Policy</h1>
           <p class="mt-4 text-base leading-7 text-slate-600">Last updated on December 26, 2024</p>
         </div>
       </div>
       <div class="relative px-6 sm:px-4 lg:px-8">
         <div
           class="mx-auto max-w-[40rem] prose-sm prose prose-slate prose-a:font-semibold prose-a:text-sky-700 hover:prose-a:text-sky-700">
-          <h1>Disclaimer Notice:</h1>
-          <p>Thank you for visiting our matrimonial website, YouTube Channel and considering our premium ad services.
-            Before proceeding, we kindly request you to carefully read and understand the following disclaimer notice:
-          </p>
-
-          <h2>Advertiser Responsibility:</h2>
-          <p>Our website/YouTube Channel offers premium ad services where individuals can display their matrimonial
-            profile ads based on basic criteria. We do not endorse, support, or recommend any specific advertiser or
-            their profiles. All profiles and advertisements displayed on our website are presented "AS IS" without any
-            warranty or guarantee.</p>
-
-          <h2>Verification of Ad Details: </h2>
-          <p>It is the responsibility of the reader/visitor to thoroughly verify and validate all the details, claims,
-            and information provided in any ad displayed on our website or YouTube channel. We strongly advise you to
-            exercise caution and due diligence before proceeding with any interactions or commitments based on the
-            information provided in the live ads.</p>
-
-          <h2>Misleading Information: </h2>
-          <p>BWhile we strive to maintain the accuracy and authenticity of the ads displayed on our website/YouTube
-            Channel, we cannot guarantee the reliability or truthfulness of the information provided by advertisers. We
-            do not assume any liability for any misleading, false, or inaccurate information contained in any ad or
-            profile.
-          </p>
-
-          <h2>User Conduct and Safety: </h2>
-          <p>We encourage all visitors to exercise caution and practice safe online behavior when engaging with other
-            users or responding to live ads on our website/ YouTube Channel. It is important to use your own judgment
-            and take necessary precautions to protect yourself from potential risks or fraudulent activities.</p>
-          <h2>Loss or Misconduct:</h2>
-          <p>We explicitly disclaim any responsibility or liability for any loss, harm, or damages incurred by any
-            individual as a result of their interactions, engagements, or relationships formed through our
-            website/YouTube Channel or as a consequence of any information provided in the live ads. Visitors are solely
-            responsible for their actions and decisions made based on the information obtained from our platform.</p>
-          <h2>Third-Party Websites or Services: </h2>
-          <p>Our website may contain links to third-party websites or services for additional information or
-            convenience. We do not have control over the content, security, or practices of these external websites.
-            Therefore, we cannot be held liable for any issues or damages that may arise from accessing or using these
-            third-party websites.</p>
-          <p>By accessing and using our matrimonial website/YouTube Channel and services, you acknowledge and agree to
-            the terms and conditions stated in this disclaimer notice. We encourage you to read our privacy policy and
-            terms of service for further information on how we handle user data and provide our services.</p>
-          <p>Please note that this disclaimer notice is subject to change without prior notice. It is your
-            responsibility to review this notice periodically for any updates or modifications.
-          </p>
-          <p>If you have any questions or concerns regarding this disclaimer notice, please contact our support team for
-            further assistance.
-          </p>
-          <h2>Disclosure</h2>
-          <p>Live Rishtey & Easymatri does not assume any responsibility or liability for the content or accuracy of
-            this document. This document is provided for informational purposes only and should not be considered legal
-            advice. It is recommended to consult with a legal professional to ensure compliance with applicable laws and
-            regulations.</p>
+          <h1 class="my-2 font-bold pt-4 text-xl uppercase">Refund Policy</h1>
+            <p class="my-2 pt-3 uppercase"> As part of the nature of our business, we do not entertain any refund.</p>
 
         </div>
       </div>
@@ -203,9 +85,7 @@
         </p>
         <div class="mt-16 flex items-center justify-center space-x-4 text-sm font-semibold leading-6 text-slate-700">
           <a href="https://liverishtey.com/privacy.html">Privacy policy</a>
-          <div class="h-4 w-px bg-slate-500/20"></div><a href="https://liverishtey.com/terms.html">Terms &
-            Conditions</a>
-            <div class="h-4 w-px bg-slate-500/20"></div><a href="https://liverishtey.com/refund-policy">Refund Policy</a>
+          <div class="h-4 w-px bg-slate-500/20"></div><a href="https://liverishtey.com/terms.html">Terms & Conditions</a>
         </div>
       </div>
     </footer>
